# Korni

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml
korni_bot/: config.py  main.py  polling.py
korni_bot/admin_web/: app.py  auth.py  routes.py
korni_bot/admin_web/templates/: base.html  categories.html  dashboard.html  dialogs.html  event_form.html  events.html  settings.html
korni_bot/bot/: callbacks.py  dispatcher.py  keyboards.py  middlewares.py  states.py  texts.py
korni_bot/bot/handlers/: admin_chat.py  catalog.py  start.py
korni_bot/db/: models.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_event_photos.py  0003_drop_total_seats.py  0004_dialog_messages.py  0005_app_settings.py
scripts/: import_legacy_users.sql
src/korni_bot/: __main__.py
src/korni_bot/admin_web/: deps.py  routes.py
src/korni_bot/admin_web/templates/: bookings.html  broadcast.html  callbacks.html  login.html  users.html
src/korni_bot/bot/: dispatcher.py
src/korni_bot/bot/handlers/: admin_chat.py  broadcast.py  catalog.py
src/korni_bot/db/: __init__.py  session.py
